<resources>
  <string name="app_name">CandyStoreV4</string>
  <string name="action_settings">Settings</string>
  <string name="reset">RESET</string>
  <string name="add">ADD</string>
  <string name="total_revenue">TotalRevenue</string>
  <string name="delete">DELETE</string>
  <string name="update">UPDATE</string>
  <string name="Check_Out">Check Out</string>
  <string name="label_name">Name</string>
  <string name="label_price">Price</string>
  <string name="button_add">ADD</string>
  <string name="button_back">BACK</string>
</resources>
