<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.jblearning.candystorev5.MainActivity">

  <item android:id="@+id/action_reset"
        android:title="@string/reset"
        android:icon="@drawable/ic_reset"
        app:showAsAction="ifRoom"/>

  <item android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"/>
  <!--Show the item in the action bar if there is room -->
  <!--line 11: it aill not be shown on screen, but if user long presses the icon, then it will -->
  <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"/>

  <item android:id="@+id/action_update"
        android:title="@string/update"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"/>

  <item android:id="@+id/action_total_revenue"
      android:title="@string/total_revenue"
      app:showAsAction="ifRoom"/>

</menu>
<!-- the order of displaying item from left to right is: RESET -> ADD -> DELETE -> UPDATE-->